RESOLVED FIXED104289
[Chromium] Layout test css3/filters/effect-reference-hw.html is failing
https://bugs.webkit.org/show_bug.cgi?id=104289
Summary [Chromium] Layout test css3/filters/effect-reference-hw.html is failing
Stephen White
Reported 2012-12-06 13:03:12 PST
The lighting direction in the feLighting sample of effect-reference-hw has a y-flip. Not sure yet if this is a Skia or WebKit bug.
Attachments
Stephen White
Comment 1 2013-01-14 14:24:32 PST
Theory: the GrTextures created by wrapping the compositor's platform textures do not have their origin set correctly (TopLeft vs BottomLeft).
Stephen White
Comment 2 2013-02-06 12:42:52 PST
Stephen White
Comment 3 2013-02-08 09:29:52 PST
Note You need to log in before you can comment on or make changes to this bug.