Fix Y-flipped lighting in accelerated SVG reference filters in CSS.  Since the compositor draws all quads as origin-TopLeft, but Skia expects all render targets (and external textures) to be origin-BottomLeft, accelerated filters were being Y-flipped twice.  Since all of the CSS filters have symmetrical parameters, no-one noticed.  However, SVG filters (e.g., feSpecularLighting) have parameters which are not symmetrical in Y, so the lighting appeared upside-down.

Now that we have support in Skia for origin-TopLeft render targets, mark both the textures and render targets as origin-TopLeft, to reflect the compositor's convention.

BUG:  See webkit.org/b/104289


Review URL: https://chromiumcodereview.appspot.com/12217047

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@181178 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: c1d6c08dcb13298002916832f9e0c7927bf9e9cd